[package]
name = "bake"
version = "0.1.0"
authors = ["Simon Kunz <simon.kunz21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "snake_benchmark"
harness = false

[dependencies]
coffee = { version = "0.4", features = ["opengl"] }
anyhow = "1.0.33"
rand = "0.7.3"
paris = { version = "1.5.7", features = ["macros", "no_logger"] }
criterion = "0.3.3"
